# HPLFlowNet

./: .gitignore  BUILD.bazel  README.md  cmd_args.py  environment.yml  environment_cuda101.yml  evaluation_bnn.py  evaluation_utils.py  main.py  main_utils.py  visualization.py
configs/: bnn_debug.yaml  bnn_eval.yaml  debug_RefRESH.yaml  debug_RefRESH_BNN.yaml  test_leon_FlyingThings3DPoses_temp.yaml  test_leon_FlyingThings3D_temp.yaml  test_leon_KITTI_temp.yaml  test_leon_RefRESH_temp.yaml  test_local_FlyingThings3DPoses_temp.yaml  test_local_FlyingThings3D_temp.yaml  test_local_KITTI_temp.yaml  test_local_RefRESH_temp.yaml  test_ours_shallow_FlyingThings3D.yaml  test_ours_shallow_KITTI.yaml  train_leon_FlyingThings3DPoses_temp.yaml  train_leon_FlyingThings3D_temp.yaml  train_leon_RefRESH_temp.yaml  train_local_FlyingThings3DPoses_temp.yaml  train_local_FlyingThings3D_temp.yaml  train_local_RefRESH_temp.yaml
data_preprocess/: IO.py  IO_refresh.py  copy_invalid.py  dataset_viewer.py  process_flyingthings3d_subset.py  process_flyingthings3d_subset_poses.py  process_refresh_rigidity.py  view_camera.py
datasets/: __init__.py  flyingthings3d_subset.py  flyingthings3d_subset_poses.py  kitti.py  refresh.py  refresh_rigidity.py
models/: HPLFlowNet.py  HPLFlowNet_shallow.py  HPLFlowPoseNet.py  PoseNet.py  __init__.py  _khash_ffi.c  bilateralNN.py  bnn_flow.py  build_khash_cffi.py  epe3d_loss.py  khash.h  khash_int2int.h  module_utils.py  signals.py
trained_models/: README.md
transforms/: transforms.py
utils/: gen_data.py  geometry.py  rigidity.py  self_supervision.py
(+790 files in other folders)
